# GoodEngine

./: .gitignore  .gitmodules  README.md
GoodEngine/: CMakeLists.txt  GoodEngine.cpp  GoodEngine.h
GoodEngine/GoodEngineCore/: CMakeLists.txt
GoodEngine/GoodEngineCore/includes/GoodEngineCore/: Application.h  Event.h  Log.h  Window.h
GoodEngine/GoodEngineCore/src/GoodEngineCore/: Application.cpp  Window.cpp
GoodEngine/GoodEngineEditor/: CMakeLists.txt
GoodEngine/GoodEngineEditor/src/: main.cpp
